Fix spacing on mobile

--- a/html/css/mobile.css
+++ b/html/css/mobile.css
@@ -13,3 +13,7 @@
 #links>a{
     margin-top: 10px;
 }
+
+#social{
+    line-height: 4rem;
+}
